Fixed word-wrap css style in body

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -99,7 +99,7 @@ body {
 	font-family: 'Museo Sans', sans-serif;
 	color: @white;
 	font-size: 16px;
-	word-wrap: break;
+	word-wrap: break-word;
 }
 
 h1, h2, h3 {
@@ -115,7 +115,6 @@ h2 {
 p {
 	font-size: :2.0em;
 	line-height: 1.4em;
-	word-wrap:break-word;
 }
 
 .navbar-inner{
